tests/fail/feat_chrono/ch_nightly/incomplete.stderr
error: Incomplete %f specifier ('.' can only appear in combination with %f)
 --> $DIR/incomplete.rs:2:29
  |
2 |     sscanf::scanf!("hi", "{:%.s}", DateTime);
  |                             ^^

error: Incomplete %z specifier (':' can only appear in combination with %z)
 --> $DIR/incomplete.rs:3:29
  |
3 |     sscanf::scanf!("hi", "{:%:b}", DateTime);
  |                             ^^

error: Incomplete chrono format '%'. Literal '%' need to be escaped as '%%'
 --> $DIR/incomplete.rs:4:29
  |
4 |     sscanf::scanf!("hi", "{:%:}", DateTime);
  |                             ^^

error: Incomplete %f specifier ('.' can only appear in combination with %f)
 --> $DIR/incomplete.rs:5:29
  |
5 |     sscanf::scanf!("hi", "{:%.3a}", DateTime);
  |                             ^^^

error: Incomplete %f specifier (numbers can only appear in combination with %f)
 --> $DIR/incomplete.rs:6:29
  |
6 |     sscanf::scanf!("hi", "{:%38}", DateTime);
  |                             ^^

error: Incomplete chrono format '%'. Literal '%' need to be escaped as '%%'
 --> $DIR/incomplete.rs:7:29
  |
7 |     sscanf::scanf!("hi", "{:%}", DateTime);
  |                             ^

error: Incomplete chrono format '%'. Literal '%' need to be escaped as '%%'
 --> $DIR/incomplete.rs:8:31
  |
8 |     sscanf::scanf!("hi", "{:%%%}", DateTime);
  |                               ^
